--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TP1</string>
+    <string name="mes_notes">Mes Notes</string>
+    <string name="element_list_ajout">Element Numero</string>
 </resources>
